fix: change quote heights on home page to stop text overflowing on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,13 +216,13 @@ padding-right: 65px;
 .quote {
     color: #122452;
     width: 400px;
-    height: 310px;
+    min-height: 310px;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    padding: 0 30px;
+    padding: 15px 30px;
     margin: 10px;
 }
 
